--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,60 +1,40 @@
-
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div id="demo" class="carousel slide" data-ride="carousel">
-          <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-            <li data-target="#demo" data-slide-to="3"></li>
-            <li data-target="#demo" data-slide-to="4"></li>
-          </ul>
-          <div class="carousel-inner p-0 m-0">
-            <div class="carousel-item active p-0 m-0 " style="height: 700px;">
-              <img
-                src="assets/device 5.jpg"
-                alt="device 5"
-                class="img-responsive"
-                width="100%"
-                height="100%"
-              />
-              <div class="carousel-caption">
-                <div>
-                  <h1 class="text-muted"></h1>
-                  <!-- <a href="#" class="primary-btn text-warning">Shop Now</a> -->
-                </div>
-                <!-- <p>We had such a great time in LA!</p> -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <div id="demo" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+          <li data-target="#demo" data-slide-to="3"></li>
+          <li data-target="#demo" data-slide-to="4"></li>
+        </ul>
+        <div class="carousel-inner mt-3">
+          <div class="carousel-item active p-0 m-0" style="height: 700px">
+            <img src="assets/device 5.jpg" alt="device 5" class="img-responsive" width="100%" height="100%" />
+            <div class="carousel-caption">
+              <div>
+                <h1 class="text-muted"></h1>
+                <!-- <a href="#" class="primary-btn text-warning">Shop Now</a> -->
               </div>
+              <!-- <p>We had such a great time in LA!</p> -->
             </div>
-            <div class="carousel-item p-0 m-0" style="height: 700px;">
-              <img
-                src="assets/device3.jpeg"
-                alt="device3"
-                class="img-responsive"
-                width="100%"
-                height="100%"
-              />
-              <div class="carousel-caption"></div>
-            </div>
-            <div class="carousel-item" style="height: 700px;">
-              <img
-                src="assets/device4.jpg"
-                alt="device4"
-                class="img-responsive"
-                width="100%"
-                height="100%"
-              />
-              <div class="carousel-caption">
-                <!-- <a href="#" class="primary-btn">Shop Now</a> -->
-                <div>
-                  <!-- <h2>Sale <span>50%</span></h2> -->
-                </div>
-                <!-- <p>We love the Big Apple!</p> -->
+          </div>
+          <div class="carousel-item p-0 m-0" style="height: 700px">
+            <img src="assets/device3.jpeg" alt="device3" class="img-responsive" width="100%" height="100%" />
+            <div class="carousel-caption"></div>
+          </div>
+          <div class="carousel-item" style="height: 700px">
+            <img src="assets/device4.jpg" alt="device4" class="img-responsive" width="100%" height="100%" />
+            <div class="carousel-caption">
+              <!-- <a href="#" class="primary-btn">Shop Now</a> -->
+              <div>
+                <!-- <h2>Sale <span>50%</span></h2> -->
               </div>
+              <!-- <p>We love the Big Apple!</p> -->
             </div>
-            <div class="carousel-item" style="height: 700px;">
+          </div>
+          <!-- <div class="carousel-item" style="height: 700px;">
               <img
                 src="assets/camera_category.jpg"
                 alt="device1"
@@ -71,149 +51,133 @@
                   <h2>Sale <span>50%</span></h2>
                 </div>
               </div>
-            </div>
-            <div class="carousel-item" style="height: 700px;">
-              <img
-                src="assets/device2.jpeg"
-                alt="device2"
-                class="img-responsive"
-                width="100%"
-                height="100%"
-              />
-              <div class="carousel-caption">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <h1>Black friday</h1>
-                      <!-- <p>
+            </div> -->
+          <div class="carousel-item" style="height: 700px">
+            <img src="assets/device2.jpeg" alt="device2" class="img-responsive" width="100%" height="100%" />
+            <div class="carousel-caption">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-5">
+                    <h1>Black friday</h1>
+                    <!-- <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                         sed do eiusmod tempor incididunt ut labore et dolore
                       </p> -->
-                      <!-- <a href="#" class="primary-btn">Shop Now</a> -->
-                    </div>
-                  </div>
-                  <div class="off-card">
-                    <!-- <h2>Sale <span>50%</span></h2> -->
+                    <!-- <a href="#" class="primary-btn">Shop Now</a> -->
                   </div>
                 </div>
-                <!-- <h3>New York</h3> -->
-                <p>We love the Big Apple!</p>
+                <div class="off-card">
+                  <!-- <h2>Sale <span>50%</span></h2> -->
+                </div>
               </div>
+              <!-- <h3>New York</h3> -->
+              <p>We love the Big Apple!</p>
             </div>
-
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </a>
           </div>
+
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="container">
-
-<!-- search -->
-<!-- search -->
-<div class="row mt-3">
-
-  <div class="col-lg-3 col-md-3 col-xl-3 mt-3">
-    <div class="input-group mb-3 col-12">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">price</span>
-      </div>
-      <input
-        type="number"
-        class="form-control"
-        placeholder="prdprice"
-        aria-label="prdprice"
-        [(ngModel)]="prdprice"
-        aria-describedby="basic-addon1"
-      />
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-3 col-xl-3 mt-3">
-    <div class="input-group mb-3 w-100 col-12">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">Name</span>
-      </div>
-      <input
-        type="text"
-        class="form-control"
-        placeholder="prodName"
-        aria-label="prodName"
-        [(ngModel)]="prodName"
-        aria-describedby="basic-addon2"
-      />
-    </div>
-  </div>
-
-  <!-- search -->
-  <div class="col-lg-3 col-md-3 col-xl-3 mt-4">
-    <select
-    #sel
-    class="form-control btn btn-primary col-12"
-    style="background-color: wheat; margin-top: -10px"
-    name="category"
-    id="cars"
-    class="form-control"
-    [(ngModel)]="SelectedCategory">
-    <option *ngFor="let cat of categoryArray" [value]="cat.CATName">
-      {{ cat.CATName }}
-    </option>
-  </select>
-  </div>
-  <div class="col-lg-3 col-md-3 col-xl-3 mt-2">
-    <button class="btn btn-warning mt-2 " style="width: 100px;" (click)="onSave()">Search</button>
   </div>
 </div>
-<!-- end serach -->
 
+<div class="container-fluid " style="width: 1500px;">
+  <!-- search -->
+  <!-- search -->
+  <div class="row mt-5">
+    <div class="col-lg-4 col-md-3 mt-3">
+      <div class="input-group mb-3 col-12">
+        <div class="input-group-prepend">
+          <span class="input-group-text" style="background-color: #ae7c54; color: white" id="basic-addon1">price</span>
+        </div>
+        <input style=" color: white" type="number" class="form-control" placeholder="prdprice"
+          aria-label="prdprice" [(ngModel)]="prdprice" aria-describedby="basic-addon1" />
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-3 mt-3">
+      <div class="input-group mb-3 w-100 col-12">
+        <div class="input-group-prepend">
+          <span class="input-group-text" style="background-color: #ae7c54; color: white" id="basic-addon1">Name</span>
+        </div>
+        <input style=" color: white" type="text" class="form-control" placeholder=""
+          aria-label="prodName" [(ngModel)]="prodName" aria-describedby="basic-addon2" />
+      </div>
+    </div>
+
+    <!-- search -->
+    <div class="col-lg-3 col-md-3 mt-4">
+      <select #sel class="form-control btn btn-primary col-12" style="margin-top: -10px"
+        name="category" id="cars" class="form-control" [(ngModel)]="SelectedCategory">
+        <option *ngFor="let cat of categoryArray" [value]="cat.CATName">
+          {{ cat.CATName }}
+        </option>
+      </select>
+    </div>
+    <div class="col-lg-1 col-md-2 mt-2 mb-5 ">
+      <button class="btn mt-1" style="
+          background-color: #ae7c54;
+          color: white;
+        " (click)="onSave()">
+        Search
+      </button>
+    </div>
+  </div>
+  <!-- end serach -->
+</div>
 <!-- items -->
-  <div class="row mt-3">
-    <div class="col-lg-3 col-md-3 col-xl-3 " *ngFor="let item of data  | paginate: {
-       itemsPerPage: 12,
-       currentPage: page,
-       totalItems:totalLength
-      }
-      ;let i = index">
+<div class="container-fluid" style="width: 1300px;">
+  <div class="row mt-3 ">
+    <div class="col-lg-3 col-md-3 col-xl-3" *ngFor="
+        let item of data
+          | paginate
+            : {
+                itemsPerPage: 12,
+                currentPage: page,
+                totalItems: totalLength
+              };
+        let i = index
+      ">
+      <div class="card mt-2 mb-4 first" style="background-color: #218490; color: white">
+        <div class="product-item p-0">
+          <div class="product-image" style="text-align: center">
+            <img class="card-img-top img2" src="{{ imgDirectory }}{{ item.PRDImage }}" alt="Card image cap " />
+            <div class="product-action">
+              <a (click)="addtocard(item.id)" [hidden]="this.check_is_staff"><i class="fa fa-cart-plus"></i></a>
 
-      <div class="card mt-2 mb-2 first">
-        <div  class="product-item  p-0"  >
-          <div class="product-image">
-            <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}"
-            alt="Card image cap" height="220" />
-          <div class="product-action">
-            <a  (click)="addtocard(item.id)" [hidden]="this.check_is_staff"><i class="fa fa-cart-plus"></i></a>
-
-            <a [routerLink]="['/product' ,item.id]"><i class="fa fa-search" ></i></a>
-          </div>
+              <a [routerLink]="['/product', item.id]"><i class="fa fa-search"></i></a>
+            </div>
           </div>
         </div>
-        <div class="card-body">
-          <div class="caption">
+        <div class="card-body Cartitem">
+          <div class="caption" >
             <div class="caption-top">
-              <h5 class="float-right badge-warning ">
-                {{ item.PRDPrice| currency }}
+              <h5 class="float-right  px-2"style="background-color:#ae7c54;border-radius:50px;" >
+                {{ item.PRDPrice | currency }}
               </h5>
               <h5>
-                <a [routerLink]="['/product', item.id]">{{ item.PRDName }}</a>
+                <!-- <a [routerLink]="['/product', item.id]" style="color: #218490;">{{ item.PRDName }}</a> -->
+                <h5 style="color: black">{{ item.PRDName }}</h5>
               </h5>
             </div>
           </div>
-          <p>{{ item.PRDDesc }}</p>
-          <a class="btn info m-1" [routerLink]="['/product' ,item.id]" >details</a>
-          <a class="btn success " (click)="addtocard(item.id)" [hidden]="this.check_is_staff">add to card</a>
+          <p class="desc">{{ item.PRDDesc }}</p>
+                <a class="btn mr-2 details" [routerLink]="['/product', item.id]">details</a>
+                <a class="btn addcart" (click)="addtocard(item.id)" [hidden]="this.check_is_staff">add to card</a>
+                <!-- <a class="btn success " (click)="addtocard(item.id)" [hidden]="this.check_is_staff">add to card</a> -->
+
+
         </div>
       </div>
     </div>
-</div>
+  </div>
 
-<div class="row mt-3  justify-content-center">
-  <pagination-controls (pageChange)="page = $event"></pagination-controls>
-</div>
-
-
+  <div class="row mt-3 justify-content-center">
+    <pagination-controls (pageChange)="page = $event"></pagination-controls>
+  </div>
 </div>
