--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -11,7 +11,7 @@
 
 
 
-<footer class="text-center text-dark mt-4" style="background-color: rgb(205, 234, 243);">
+<footer class="text-center text-dark mt-4" style="background-color: #13424c;color: white;">
   <div class="container-fluid p-4">
       <div class="row">
 
@@ -79,8 +79,8 @@
       </div>
   </div>
 
-  <div class="text-center p-3 text-dark" >
+  <div class="text-center p-3" style="color: white;">
     © 2020 Copyright:
-    <a class="text-dark" href="https://mdbootstrap.com/">mobile store.com</a>
+    <a style="color: white;" href="https://mdbootstrap.com/">mobile store.com</a>
   </div>
 </footer>
